syntax = "proto3";
package bierzee;

import "user.proto";

message Organization {
  string id = 1;
  string name = 2;
  string code = 3;
  int64 createdAt = 4;
}

message GetOrganizationResponse {
  Organization organization = 1;
}

message PostCreateOrganizationRequest {
  string organizationName = 1;
  string organizationPassword = 2;
  string userName = 3;
  string userLoginId = 4;
}

message PostCreateOrganizationResponse {
  Organization organization = 1;
  User user = 2;
}

message PostCreateUserRequest {
  string userName = 1;
  string userLoginId = 2;
}

message PostCreateUserResponse {
  User user = 2;
}

message PostAdminRequest {
  string userId = 1;
  bool isAdmin = 2;
}